# lyng

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md
crates/html_parser/: Cargo.toml  README.md
crates/html_parser/docs/: architecture.md  implementation-notes.md  spec.md
crates/html_parser/src/: error.rs  lib.rs
crates/html_parser/src/input/: mod.rs  stream.rs
crates/html_parser/src/tokenizer/: entities.rs  mod.rs  states.rs  tokens.rs
crates/html_parser/src/tree/: active.rs  builder.rs  foreign.rs  insertion.rs  mod.rs  open.rs
crates/html_parser/tests/: encoding_tests.rs  serializer_tests.rs  tokenizer_tests.rs  tree_tests.rs
crates/lyng-js/builtins/: Cargo.toml
crates/lyng-js/builtins/src/: bootstrap.rs  context.rs  descriptors.rs  internal.rs  lib.rs  public.rs  registry.rs
crates/lyng-js/builtins/src/bootstrap/: descriptors.rs  globals.rs  tests.rs
crates/lyng-js/builtins/src/public/: dispatch.rs  metadata.rs  temporal.rs
crates/lyng-js/builtins/src/public/dispatch/: arrays.rs  binary_data.rs  collections.rs  date.rs  disposal.rs  error_objects.rs  functions.rs  iterators.rs  json.rs  language.rs  object_reflection.rs  objects.rs  primitives.rs  promises.rs  regexp.rs  strings.rs  support.rs  temporal.rs
crates/lyng-js/builtins/src/public/dispatch/arrays/: iteration.rs
crates/lyng-js/builtins/src/public/dispatch/binary_data/: atomics.rs  buffers.rs  data_view.rs  typed_arrays.rs
crates/lyng-js/builtins/src/public/dispatch/date/: parsing.rs
crates/lyng-js/builtins/src/public/families/: arrays.rs  binary_data.rs  collections.rs  date.rs  descriptors.rs  errors.rs  functions.rs  globals.rs  installed.rs  intrinsics.rs  iterators.rs  json.rs  mod.rs  modules.rs  object_reflection.rs  objects.rs  primitives.rs  promises.rs  prototype_links.rs  regexp.rs  scaffolding.rs  strings.rs
crates/lyng-js/builtins/src/public/metadata/: binary_data.rs  core.rs  temporal.rs
crates/lyng-js/builtins/src/public/temporal/: duration.rs  instant.rs  plain_date.rs  plain_date_time.rs  plain_month_day.rs  plain_time.rs  plain_year_month.rs  zoned_date_time.rs
crates/lyng-js/cli/: Cargo.toml
crates/lyng-js/cli/src/: error.rs  execution.rs  extensions.rs  host.rs  lib.rs  main.rs
crates/lyng-js/cli/tests/: test262_flag.rs
crates/lyng-js/compiler/: Cargo.toml
crates/lyng-js/compiler/src/: dynamic.rs  environment.rs  error.rs  lib.rs  module.rs  script.rs
crates/lyng-js/compiler/src/script/: activation.rs  bindings.rs  calls.rs  classes.rs  control.rs  emit.rs  expr.rs  function.rs  loops.rs  operators.rs  optional_chains.rs  property_exprs.rs  reference_targets.rs  state.rs  stmt.rs  templates.rs  tests.rs  variables.rs
crates/lyng-js/fuzz/: Cargo.toml
crates/lyng-js/fuzz/fuzz_targets/: fuzz_bytecode_disassembler.rs  fuzz_lexer.rs  fuzz_parser.rs
crates/lyng-js/tests/: Cargo.toml
crates/lyng-js/tests/src/: api_surface.rs  atom_lifetime.rs  bootstrap_memory.rs  diagnostics.rs  embedding_extensions.rs  end_to_end.rs  execution_semantics.rs  lib.rs  parser_coverage.rs  runtime_primitives.rs  runtime_primitives_integration.rs  runtime_substrate_integration.rs  runtime_substrate_scaffolding.rs  runtime_substrate_surface.rs  sema_integration.rs  shared_memory.rs  smoke.rs  temporal.rs
crates/lyng-js/tests/src/execution_semantics/: arguments_and_for_in.rs  classes.rs  collections.rs  eval.rs  exceptions.rs  functions.rs  json.rs  objects.rs  optional_chaining.rs  regexp.rs  runtime_pipeline.rs  runtime_scaffolding.rs  script_core.rs  support.rs
crates/lyng-js/tests/src/execution_semantics/script_core/: arrays_and_buffers.rs  builtins_reflect_proxy.rs  control_flow.rs  destructuring_and_iteration.rs  globals_dates_templates.rs  misc_regressions.rs  numeric_and_collections.rs  regexp_and_annex_b.rs  string_and_regexp.rs
crates/lyng-js/tests/src/temporal/: duration.rs  instant.rs  plain_date.rs  plain_date_time.rs  plain_month_day.rs  plain_shared.rs  plain_time.rs  plain_year_month.rs  surface.rs  zoned_date_time.rs
crates/lyng-js/vm/: Cargo.toml
crates/lyng-js/vm/src/: activation.rs  enumeration.rs  error.rs  extensions.rs  frame.rs  installed.rs  lib.rs  marker.rs  name_refs.rs  opcode_counts.rs  tests.rs  vm.rs
crates/lyng-js/vm/src/tests/: async_and_generators.rs  classes.rs  core.rs  debugger.rs  disposables.rs  dynamic_import.rs  errors.rs  eval_and_with.rs  feedback.rs  generators.rs  inline_caches.rs  metadata_and_tail_calls.rs  modules.rs  promises.rs  support.rs  text.rs  trampoline_dispatch.rs
crates/lyng-js/vm/src/vm/: activation_objects.rs  async_functions.rs  builtin_dispatch.rs  bytecode_calls.rs  call.rs  debugger.rs  direct_eval_env.rs  dispatch.rs  dispatch_state.rs  dynamic_compilation.rs  exceptions.rs  feedback.rs  generators.rs  global_script.rs  install.rs  internal_calls.rs  jobs.rs  loop_iteration.rs  modules.rs  names.rs  property_access.rs  registers.rs  runtime_objects.rs  state.rs  tiering.rs  values.rs  with_env.rs
crates/lyng-js/vm/src/vm/builtin_dispatch/: class_helpers.rs  dispatch_context.rs  dynamic_import.rs  function_allocation.rs  function_helpers.rs  object_helpers.rs  regexp_helpers.rs  template_helpers.rs
crates/lyng-js/vm/src/vm/dispatch/: arithmetic.rs  property.rs
crates/lyng-js/vm/src/vm/dispatch_handlers/: arithmetic.rs  calls.rs  control_flow.rs  exceptions.rs  generators.rs  iterators.rs  loads.rs  mod.rs  names.rs  opcode_stubs.rs  prefix.rs  property.rs  scope.rs  stub.rs
tools/html5lib_runner/: Cargo.toml
tools/html5lib_runner/src/: main.rs
tools/lyng-js-bench/: Cargo.toml
tools/lyng-js-bench/src/: cli.rs  compare.rs  density.rs  lib.rs  main.rs  runtime.rs  test262.rs  v8suite.rs
tools/lyng-js-bench/src/compare/: v8_v7.rs
tools/lyng-js-bench/tests/: test262_perf.rs
tools/lyng-js-test262/: Cargo.toml
tools/lyng-js-test262/src/: cli.rs  diagnostics.rs  execution.rs  extensions.rs  helpers.rs  lib.rs  main.rs  metadata.rs  report.rs  selection.rs  temporal_helpers.js
tools/lyng-js-test262/tests/: diagnostics.rs  harness.rs  timeout.rs
(+457 files in other folders)
