[package]
name = "lyng-html-parser"
version.workspace = true
edition.workspace = true
description = "A WHATWG-compliant HTML parser in pure Rust"
license.workspace = true

[lib]
name = "lyng_html_parser"

[features]
default = []
encoding = ["encoding_rs"]

[dependencies]
lyng-dom = { workspace = true }
encoding_rs = { version = "0.8", optional = true }

[dev-dependencies]
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
