[package]
name = "html5lib_runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "html5lib_runner"
path = "src/main.rs"

[dependencies]
encoding_rs = "0.8"
lyng-html-parser = { path = "../../crates/html_parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
