[package]
name = "lyng-js-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
lyng-js-common = { workspace = true }
lyng-js-ast = { workspace = true }
lyng-js-sema = { workspace = true }
lyng-js-env = { workspace = true }
lyng-js-bytecode = { workspace = true }
lyng-js-host = { workspace = true }
lyng-js-parser = { workspace = true }
lyng-js-types = { workspace = true }

[dev-dependencies]
