[package]
name = "lyng-js-tests"
version.workspace = true
edition.workspace = true

[dependencies]
lyng-js-common = { workspace = true }
lyng-js-lexer = { workspace = true }
lyng-js-ast = { workspace = true }
lyng-js-parser = { workspace = true }
lyng-js-sema = { workspace = true }
lyng-js-types = { workspace = true }
lyng-js-gc = { workspace = true }
lyng-js-ops = { workspace = true }
lyng-js-host = { workspace = true }
lyng-js-objects = { workspace = true }
lyng-js-env = { workspace = true }
lyng-js-bytecode = { workspace = true }
lyng-js-compiler = { workspace = true }
lyng-js-vm = { workspace = true }
lyng-js-builtins = { workspace = true }
